--- a/index.html
+++ b/index.html
@@ -106,9 +106,20 @@
 
         <section id="contact" class="section section-5">
             <div class="form-container">
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLScR89hT5_fQPSZh-OX1ZtPwYsrTCHPDNHh0O-ildKly9AUcaw/viewform?embedded=true"
-                    frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                <form id="contactForm" action="enviar.php" method="post">
+                    <h2>Contáctanos</h2>
+                    <label for="nombre">Nombre Completo:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email"
+                           id="email" name="email" required>
+
+                    <label for="telefono">Teléfono:</label>
+                    <input type="tel" id="telefono" name="telefono">
+
+                    <button type="submit">Enviar</button>
+                </form>
             </div>
         </section>
 
@@ -123,7 +134,6 @@
         </div>
         <div class="designed-by-container">
             <p class="translate" data-section="footer" data-value="text">Diseñado por:</p>
-            <span class="author">Alejandro Gómez</span>
             <span class="author">Camilo Hernández</span>
         </div>
     </footer>
