--- a/confirmacion.html
+++ b/confirmacion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mensaje enviado</title>
+    <title>¡Contacto enviado!</title>
 </head>
 <body>
-<h1>¡Gracias por tu mensaje!</h1>
-<p>Tu mensaje ha sido enviado correctamente.</p>
+<h1>¡Datos recibidos!</h1>
+<p>Tu contacto ha sido enviado con éxito.</p>
+<button onclick="location.href='index.html'">Inicio</button>
 </body>
 </html>
