--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Walk World Tour</title>
 </head>
@@ -124,7 +125,10 @@
         </section>
 
         <button id="wp-btn" class="wp-btn">
-            <i class="fa fa-whatsapp"></i>
+            <a href="https://wa.me/573000000000?text=Hola"
+               class="whatsapp" target="_blank">
+                <i class="fa fa-whatsapp whatsapp-icon"></i>
+            </a>
         </button>
     </main>
 
