--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" ></script>
+
 
     <title>Walk World Tour</title>
 </head>
@@ -108,37 +108,35 @@
             un simple paso</h4>
 
         <section id="contact" class="section section-5">
-            <div class="form-group">
 
-                <form id="contactForm" action="./Backend/FormSend.php" method="post" class="form">
+            <div class="mt-5">
 
-                    <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre Completo</label>
-                        <input type="nombre" id="nombre" name="nombre" class="form-control"
-                               placeholder="Tu nombre aqui"></div>
 
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" name="email" class="form-control"
-                               placeholder="Tu correo aqui"></div>
+                <form class="for" action="./Backend/FormSend.php" method="post">
 
-                    <div class="mb-3">
-                        <label for="telefono" class="form-label">Telefono</label>
-                        <input type="telefono" id="telefono" name="telefono" class="form-control"
-                               placeholder="Tu telefono aqui"></div>
+                    <h2>Te contactamos</h2>
 
-                    <button type="submit" class="btn btn-primary" id="Enviar">Enviar</button>
+                    <div class="mt-3">
+                        <label for="nombre">Nombre Completo</label>
+                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresa tu nombre completo">
+                    </div>
+
+                    <div class="mt-3">
+                        <label for="email">E-mail</label>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Ingresa tu email">
+                    </div>
+
+                    <div class="mt-3">
+                        <label for="telefono">Nombre Completo</label>
+                        <input type="tel" class="form-control" name="telefono" id="telefono" placeholder="Ingresa tu telefono">
+                    </div>
+
+                    <input class="btn btn-primary" type="submit" value="Enviar">
+
                 </form>
             </div>
 
-            <script>
-
-                $('Enviar').click(function (){
-
-                })
-            </script>
-
-            </section>
+        </section>
 
 
         <a href="https://wa.me/573000000000?text=Hola"
