--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -112,7 +112,7 @@
             <div class="mt-5">
 
 
-                <form class="for" action="./Backend/FormSend.php" method="post">
+                <form class="for" action="FormSend.php" method="post">
 
                     <h2>Te contactamos</h2>
 
@@ -129,6 +129,11 @@
                     <div class="mt-3">
                         <label for="telefono">Nombre Completo</label>
                         <input type="tel" class="form-control" name="telefono" id="telefono" placeholder="Ingresa tu telefono">
+                    </div>
+
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="SwitchCheckbox">
+                        <label class="form-check-label" for="SwitchCheckbox">Acepto ser contactado</label>
                     </div>
 
                     <input class="btn btn-primary" type="submit" value="Enviar">
