--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
                 <a href="index.html">WalkWorld.<span class="highlighted">Tour</span></a>
             </div>
             <div class="rigth-menu">
-                <ul id="flags">
-                    <li class="hidden" data-language="es"><span class="fi fi-co"></span></li>
-                    <li data-language="en"><span class="fi fi-us"></span></li>
-                </ul>
                 <input type="checkbox" id="menu-toggle">
                 <label for="menu-toggle" class="menu-icon">&#9776;</label>
                 <ul class="menu">
@@ -75,6 +71,42 @@
                 aventura.</p>
         </section>
 
+        <section id="about" class="section section-3">
+
+            <div class="about">
+                <div class="container px-4 text-center">
+                    <div class="row">
+
+                        <div class="col-6 align-justify m-12" data-section="about" data-value="info" >
+                            <p class="translate">
+                                Colegas, mi gran viaje a pie por el mundo comienza este 1 de junio desde la ciudad de Bogotá, Colombia, donde salgo en dirección Panamá!
+                                <br><br>
+
+                                Espero contar con su compañía.<br><br>
+                                Nos vemos en la carretera!<br><br>
+
+                                Para más info visita mí página web www.deguerreo.com<br><br>
+                            </p>
+                        </div>
+
+                        <div class="col-4 m-12">
+                            <iframe width="424" height="238"
+                                    src="https://www.youtube.com/embed/C928mvOhKho"
+                                    title="🔥Bienvenid@s a este gran viaje: LA VUELTA AL MUNDO A PIE🌍👣"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+
+                            </iframe>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
         <section id="gallery" class="section section-4">
             <div class="gallery">
                 <figure class="gallery-item gallery-item-1">
@@ -110,7 +142,6 @@
         <section id="contact" class="section section-5">
 
             <div class="mt-5">
-
 
                 <form class="for" action="FormSend.php" method="post">
 
