--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <div class="mt-5">
 
-                <form class="for" action="FormSend.html" method="post">
+                <form class="for" action="./FormSend.html" method="post">
 
                     <h2>Te contactamos</h2>
 
