--- a/Backend/FormSend.html
+++ b/Backend/FormSend.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="styles/style.css">
+            <link rel="stylesheet" href="../styles/style.css">
     <title>¡Contacto enviado!</title>
 </head>
 <body>
