Fixed Backend: Back Button

--- a/Backend/FormSend.html
+++ b/Backend/FormSend.html
@@ -40,6 +40,6 @@ pg_close($str_conn);
 <div class="alert alert-warning" role="alert">
   ¡Tu contacto ha sido enviado con éxito!
 </div>
-<button onclick="location.href='index.html'">Inicio</button>
+<button onclick="history.back()">Volver</button>
 </body>
 </html>
