--- a/index.html
+++ b/index.html
@@ -174,10 +174,12 @@
         </h4>
 
         <section id="contact" class="section-2">
-            <div class="form-frame">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScR89hT5_fQPSZh-OX1ZtPwYsrTCHPDNHh0O-ildKly9AUcaw/viewform?embedded=true" width="900" height="704" frameborder="1" marginheight="0" marginwidth="0">Cargando…</iframe>
+            <div class="form-frame align-center">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScR89hT5_fQPSZh-OX1ZtPwYsrTCHPDNHh0O-ildKly9AUcaw/viewform?embedded=true"
+                        height="500px" width="800" align="center" allowtransparency="true"></iframe>
             </div>
         </section>
+
 
 
         <a href="https://wa.me/573000000000?text=Hola"
